--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- This div wraps all the Guest content together -->
             <div class="counter-wrapper">
                 <div id="header">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 </div>
             <div class="content">
                 <div class="score-wrapper">
